--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
             android:screenOrientation="sensorLandscape"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
+            <!--android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen">-->
+
         <activity android:name=".GameActivity" android:screenOrientation="sensorLandscape">
 
         </activity>
