--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,16 +6,22 @@
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
-            android:screenOrientation="sensorLandscape"
             android:roundIcon="@mipmap/ic_launcher_round"
+            android:screenOrientation="sensorLandscape"
             android:supportsRtl="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
-            <!--android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen">-->
-
-        <activity android:name=".GameActivity" android:screenOrientation="sensorLandscape">
-
+        <activity
+                android:name=".ResultsActivity"
+                android:screenOrientation="sensorLandscape">
         </activity>
-        <activity android:name=".MainActivity" android:screenOrientation="sensorLandscape">
+        <!-- android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen"> -->
+        <activity
+                android:name=".GameActivity"
+                android:screenOrientation="sensorLandscape">
+        </activity>
+        <activity
+                android:name=".MainActivity"
+                android:screenOrientation="sensorLandscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
